comment out Process.waitFor() call in FileVFS.setPermissions()